<resources>
    <string name="app_name">Quiz</string>

    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_nickname">Nickname</string>
    <string name="hint_age">Age</string>
    <string name="btn_submit">Submit</string>
    <string name="score">Score</string>
    <string name="name">Name</string>
    <string name="start">Start Time</string>
    <string name="end">End Time</string>
    <string name="summary">Quiz Summary</string>
    <string name="quit">Quit</string>
    <string name="start_new">Start New</string>
    <string name="welcome_mesage">Welcome To Quiz. Please register Before you start</string>

    <string-array name="questions">
        <item>Question 1</item>
        <item>Question 2</item>
        <item>Question 3</item>
        <item>Question 4</item>
    </string-array>

</resources>
