<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent" android:layout_height="match_parent">

    <TableLayout android:background="@color/white" android:layout_margin="20dp" android:layout_width="match_parent"
                 android:layout_height="match_parent">
        <TableRow android:gravity="center">
            <TextView android:textSize="20sp" android:text="@string/summary" android:gravity="center"
                      android:textStyle="bold"/>
        </TableRow>
        <TableRow>
            <TextView android:layout_width="match_parent" android:layout_height="50dp" android:text="@string/name"
                      android:layout_margin="10dp"  android:textSize="18sp"/>
            <TextView android:layout_width="match_parent" android:layout_height="50dp" android:id="@+id/name"
                      android:layout_margin="10dp"  android:textSize="18sp"/>
        </TableRow>
        <TableRow >
            <TextView android:layout_width="match_parent" android:layout_height="50dp" android:text="@string/score"
                      android:layout_margin="10dp"  android:textSize="18sp"/>
            <TextView android:layout_width="match_parent" android:layout_height="50dp" android:id="@+id/score"
                      android:layout_margin="10dp"  android:textSize="18sp"/>
        </TableRow>
        <TableRow >
            <TextView android:layout_width="match_parent" android:layout_height="50dp" android:text="@string/start"
                      android:layout_margin="10dp"  android:textSize="18sp"/>
            <TextView android:layout_width="match_parent" android:layout_height="50dp" android:id="@+id/start"
                      android:layout_margin="10dp"  android:textSize="18sp"/>
        </TableRow>
        <TableRow>
            <TextView android:layout_width="match_parent" android:layout_height="50dp" android:text="@string/end"
                      android:layout_margin="10dp" android:textSize="18sp"/>
            <TextView android:layout_width="match_parent" android:layout_height="50dp" android:id="@+id/end"
                      android:layout_margin="10dp"  android:textSize="18sp"/>
        </TableRow>
    </TableLayout>

</FrameLayout>