<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
        <EditText
                android:id="@+id/firstname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_firstname"
                android:inputType="textCapSentences"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/firstname"
                android:textColorHint="@color/input_login_hint"/>
        <EditText
                android:id="@+id/lastname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_lastname"
                android:inputType="textCapSentences"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/firstname"
                android:textColorHint="@color/input_login_hint"/>
        <EditText
                android:id="@+id/nickname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_nickname"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/firstname"
                android:textColorHint="@color/input_login_hint"/>
        <EditText
                android:id="@+id/age"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_age"
                android:inputType="number"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/firstname"
                android:imeOptions="actionSend"
                android:textColorHint="@color/input_login_hint"/>
        <Button
                android:id="@+id/submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@color/btn_login_bg"
                android:textSize="18sp"
                android:text="@string/btn_submit"
                android:textColor="@color/question"/>
    </LinearLayout>
</FrameLayout>