<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_login"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

        <EditText
                android:id="@+id/firstname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_firstname"
                android:inputType="textCapSentences"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

        <EditText
                android:id="@+id/lastname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_lastname"
                android:inputType="textCapSentences"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

        <EditText
                android:id="@+id/nickname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_nickname"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

        <EditText
                android:id="@+id/age"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_age"
                android:inputType="number"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:imeOptions="actionSend"
                android:textColorHint="@color/input_login_hint" />

        <!-- Login Button -->

        <Button
                android:id="@+id/submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@color/btn_login_bg"
                android:text="@string/btn_submit"
                android:textColor="@color/btn_login" />


    </LinearLayout>


</LinearLayout>